--- a/travel-planner-api/.env
+++ b/travel-planner-api/.env
@@ -1,1 +1,2 @@
-MONGO_URI = "mongodb+srv://rgauna:Rjg.12779@cluster0.5iwtzcp.mongodb.net/travelplanner?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://rgauna:Rjg.12779@cluster0.5iwtzcp.mongodb.net/travelplanner?retryWrites=true&w=majority"
+TOKEN_SECRET="some secret key"
