add: styles for login and navbar

--- a/travel-planner-api/.env
+++ b/travel-planner-api/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://rgauna:Rjg.12779@cluster0.5iwtzcp.mongodb.net/travelplanner?retryWrites=true&w=majority"
 TOKEN_SECRET="some secret key"
+FRONTEND_URL="http://localhost:5173"
