--- a/travel-planner-api/package.json
+++ b/travel-planner-api/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
+    "react-bootstrap": "^2.10.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
