--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -16,8 +16,12 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-i18next": "^15.0.3",
-    "react-router-dom": "^6.27.0"
+    "react-icons": "^5.3.0",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.27.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
