--- a/client-frontend/package.json
+++ b/client-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "i18next": "^23.16.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
